Try to resolve N+1 issue by use join for fetch mode for person and pairing boards
[#177807748]